<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">


    <EditText
        android:id="@+id/register_email"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="276dp"
        android:background="@drawable/input"
        android:ems="10"
        android:fontFamily="@font/ubuntu"
        android:hint="@string/register_email"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/register_username"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="340dp"
        android:background="@drawable/input"
        android:ems="10"
        android:fontFamily="@font/ubuntu"
        android:hint="@string/register_username"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/register_method_btn_google"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="472dp"
        android:background="@drawable/button"
        android:fontFamily="@font/ubuntu"
        android:onClick="signUp"
        android:text="@string/register_submit_button"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="146dp"
        android:layout_height="146dp"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_light" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="404dp"
        android:background="@drawable/input"
        android:ems="10"
        android:fontFamily="@font/ubuntu"
        android:hint="@string/register_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/register_already_account"
        android:layout_width="301dp"
        android:layout_height="33dp"
        android:layout_marginTop="616dp"
        android:ems="10"
        android:fontFamily="@font/ubuntu"
        android:onClick="show"
        android:text="@string/register_has_account"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>