<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/login_google"
        android:layout_width="46dp"
        android:layout_height="42dp"
        android:layout_marginTop="532dp"
        android:onClick="unsupported"
        android:src="@drawable/google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="276dp"
        android:background="@drawable/input"
        android:ems="10"
        android:fontFamily="@font/ubuntu"
        android:hint="@string/login_email"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/register_method_btn_google"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="404dp"
        android:background="@drawable/button"
        android:fontFamily="@font/ubuntu"
        android:onClick="signIn"
        android:text="@string/login_submit_button"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="146dp"
        android:layout_height="146dp"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_light" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="340dp"
        android:background="@drawable/input"
        android:ems="10"
        android:fontFamily="@font/ubuntu"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_textview_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="592dp"
        android:fontFamily="@font/ubuntu"
        android:text="@string/login_forgot_password"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/register_already_account"
        android:layout_width="301dp"
        android:layout_height="33dp"
        android:layout_marginTop="640dp"
        android:ems="10"
        android:fontFamily="@font/ubuntu"
        android:onClick="show"
        android:text="@string/register_not_registered"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_textview_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="496dp"
        android:fontFamily="@font/ubuntu"
        android:text="@string/login_continue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/login_discord"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="532dp"
        android:onClick="unsupported"
        android:src="@drawable/discord"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>