<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_nearme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NearMeActivity">

    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent">


    </LinearLayout>

    <LinearLayout
        android:id="@+id/top_menu"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024"></LinearLayout>

    <TextView
        android:id="@+id/nearme_info"
        android:layout_width="256dp"
        android:layout_height="87dp"
        android:layout_marginTop="356dp"
        android:fontFamily="@font/ubuntu"
        android:text="@string/nearme_text_info"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nearme_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nearme_location"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nearme_info" />

    <TextView
        android:id="@+id/nearme_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/nearme_products"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nearme_position" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/nearme_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="212dp"
        android:layout_height="47dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:backgroundTintMode="add"
        android:max="300"
        android:progressBackgroundTint="@color/light_gray"
        android:progressBackgroundTintMode="add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nearme_radius" />

    <TextView
        android:id="@+id/nearme_radius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/nearme_radius_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nearme_data" />

</androidx.constraintlayout.widget.ConstraintLayout>